--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html5>
 <header></header>
 
-<body>
-	Hello world!
+<body style="background-image: url(https://i.ytimg.com/vi/tntOCGkgt98/maxresdefault.jpg); contain;">
+	<h1>Hello world!</h1>
+	<h2>Groceries</h2>
+	<ul style="color: gray">
+		<li>Bread</li>
+		<li>Milk</li>
+	</ul>
 </body>
 
 <footer></footer>
